# Users/src/main/java/pl/polsl/users/entity/Admin.java
@@ -1,24 +1,17 @@
 package pl.polsl.users.entity;
 
 import lombok.*;
+import lombok.experimental.SuperBuilder;
 
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.Id;
+import javax.persistence.*;
 
 @Entity
+@DiscriminatorValue("1")
 @Getter
 @Setter
-@Builder
 @NoArgsConstructor
-@AllArgsConstructor
-public class Admin {
+@SuperBuilder
+public class Admin extends User{
 
-    @Id
-    private Long id;
 
-    private String firsName;
-    private String lastName;
-
-    private String userId;
 }
